Issue #16971: Fix a refleak in the charmap decoder.